disabled ui tests

--- a/MyFirstDemoApp.xcodeproj/xcshareddata/xcschemes/MyFirstDemoApp.xcscheme
+++ b/MyFirstDemoApp.xcodeproj/xcshareddata/xcschemes/MyFirstDemoApp.xcscheme
@@ -39,7 +39,7 @@
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO">
+            skipped = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D789560C26A95EBA00E05385"
